chore: rename from modal to admin-modal

--- a/styles/components/dialog.css
+++ b/styles/components/dialog.css
@@ -1,4 +1,4 @@
-.modal {
+.admin-modal {
   background-color: var(--admin-beige);
   margin-top: 15vh;
   margin-bottom: 0;
@@ -9,12 +9,12 @@
 
 }
 
-.modal__body {
+.admin-modal__body {
   background-color: var(--admin-beige);
   padding: var(--spacing-medium);
 }
 
-.modal__header {
+.admin-modal__header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,8 +23,8 @@
   border-bottom: 1px solid var(--admin-border);
 }
 
-.modal__footer,
-.modal .form__button-container {
+.admin-modal__footer,
+.admin-modal .form__button-container {
   display: flex;
   justify-content: center;
   padding: var(--spacing-small);
@@ -36,7 +36,7 @@
   margin-bottom: 0;
 }
 
-.modal__header-title {
+.admin-modal__header-title {
   margin: 0;
   margin-left: var(--spacing-small);
   text-transform: uppercase;
@@ -50,13 +50,13 @@
   }
 }
 
-.modal__title {
+.admin-modal__title {
   text-align: center;
   font-size: 1.5rem;
   color: var(--black);
 }
 
-.modal__body-title {
+.admin-modal__body-title {
   margin: var(--spacing-xlarge);
   color: var(--white);
   font-size: 20px;
@@ -64,18 +64,18 @@
   justify-content: center;
 }
 
-.modal__content {
+.admin-modal__content {
   & input,
   & select {
     width: 100%;
   }
 }
 
-.modal__content--centered {
+.admin-modal__content--centered {
   margin: 0 auto;
 }
 
-.modal--cover {
+.admin-modal--cover {
   margin: 0;
   width: 100%;
   height: 100%;
@@ -86,11 +86,11 @@
   bottom: 0;
 }
 
-.modal--animation {
+.admin-modal--animation {
    animation: slide-out-to-right 0.4s;
 }
 
-.modal--animation.modal--animation-active {
+.admin-modal--animation.admin-modal--animation-active {
   animation: slide-in-from-right 0.4s;
 }
 
@@ -105,35 +105,35 @@
 }
 
 @media (--breakpoint-md) {
-  .modal__content--constrained {
+  .admin-modal__content--constrained {
     width: 80%;
   }
 
-  .modal__body {
+  .admin-modal__body {
     padding: var(--spacing-large) var(--spacing-xlarge) 150px var(--spacing-xlarge);
   }
-  .modal__footer,
-  .modal .form__button-container {
+  .admin-modal__footer,
+  .admin-modal .form__button-container {
     padding: var(--spacing-large);
   }
 
-  .modal__header {
+  .admin-modal__header {
     padding: var(--spacing-medium) var(--spacing-small);
   }
 
-  .modal__header-title {
+  .admin-modal__header-title {
     margin-left: var(--spacing-medium);
   }
 }
 
 @media (--breakpoint-lg) {
-  .modal__content--constrained {
+  .admin-modal__content--constrained {
     width: 50%;
   }
 }
 
 @media (--breakpoint-xxl) {
-  .modal__content--constrained {
+  .admin-modal__content--constrained {
     width: 40%;
   }
 }
