feat: uri in all pages overview

--- a/styles/components/pagelist.css
+++ b/styles/components/pagelist.css
@@ -29,6 +29,7 @@
 .admin-pagelist__item__content--sub {
   opacity: 0.6;
   font-size: var(--font-size-xsmalltext);
+  word-break: break-word;
 }
 
 .admin-pagelist__item__page-status {
