feat: moved publisher info to the bottom, more streamlined collapse functionality, prevent overflow

--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -134,39 +134,30 @@ button.admin-panel__open {
   border-bottom: 1px solid var(--admin-border);
 }
 
-.admin-menu__publisher {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.admin-menu__publisher-name,
-.admin-menu__publisher-role {
-  line-height: 1rem;
-  display: inline-block;
-}
-
-.admin-menu__publisher-name {
-  font-weight: bold;
+.admin-menu__publisher-info {
+  & dd,
+  & dt {
+    word-break: break-all;
+  }
+  & dt {
+    display: inline-block;
+    width: 100px;
+  }
 }
 
 .admin-menu__publisher-role {
   text-transform: capitalize;
+  & ~ .admin-menu__publisher-role {
+    margin-left: 105px;;
+  }
 }
 
-.admin-menu__admin-dropdown {
-  background-color: var(--white);
-  box-shadow: 0 3px 6px rgba(0,0,0,.2);
-  top: 35px;
-  position: absolute;
-  right: 25px;
-  border-radius: 3px;
-  width: 140px;
-}
-
-.admin-menu__admin-dropdown-item {
-  padding: var(--spacing-small) var(--spacing-medium);
-  color: var(--admin-primary);
+.admin-menu__log-out {
+  padding: 5px;
+  text-decoration: none;
+  & i {
+    display: block;
+  }
 }
 
 .admin-menu__header-avatar {
@@ -257,9 +248,11 @@ button.admin-panel__open {
 
   .admin-menu__header-avatar {
     margin-right: var(--spacing-medium);
-    width: 48px;
-    height: 48px;
-    border: 3px solid white;
+    width: 32px;
+    height: 32px;
+    border: 1px solid white;
+    vertical-align: middle;
+    display: inline-block;
   }
   .admin-edit__button {
     padding: 15px;
