fix: show page count

--- a/styles/components/pagelist.css
+++ b/styles/components/pagelist.css
@@ -49,7 +49,8 @@
 }
 
 .admin-pagelist__filter,
-.admin-pagelist__filter-container button {
+.admin-pagelist__filter-container button,
+.admin-pagelist__filter-hits {
   margin-bottom: 2vw;
   margin-left: 2vw;
 }
