--- a/styles/index.css
+++ b/styles/index.css
@@ -18,4 +18,5 @@
 @import "components/spinner";
 @import "components/message";
 @import "components/pagelist";
+@import "components/table";
 @import "trumps/utilities"
